# aganitha_papers

./: README.md  pyproject.toml
output/: results.csv
src/aganitha_papers/: main.py  papers.py
tests/: test_papers.py
