[project]
name = "aganitha-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Anu1027",email = "anuradhasomisetti1027@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)"
]

[tool.poetry]
name = "aganitha-papers"
version = "0.1.0"
description = ""
authors = ["Anuradha"]
packages = [{include = "aganitha_papers", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
